<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:background="@drawable/bg_animation"
    tools:context=".ui.registration.RegistrationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:orientation="vertical"
    android:layout_marginTop="@dimen/activity_vertical_margin">
    >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/nophoto" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:autoSizeMaxTextSize="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="BREAK-O-LAST"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="italic" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/uname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/ic_person"
                        android:drawablePadding="20dp"
                        android:hint="Enter Your Name"
                        android:inputType="textPersonName"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/ic_phone"
                        android:drawablePadding="20dp"
                        android:hint="Enter Phone Number"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/ic_add_location"
                        android:drawablePadding="20dp"
                        android:hint="Enter Address"
                        android:inputType="textPersonName"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="20dp"
                        android:hint="Enter Email Address"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>
                   <RadioGroup
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="8dp"
                       android:layout_marginRight="20dp"
                       android:layout_marginBottom="8dp"
                       app:hintTextColor="@color/colorPrimaryDark"
                       android:layout_gravity="center"
                       android:drawablePadding="20dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:textSize="@dimen/activity_horizontal_margin"
                           android:text="Gender"

                       />
                       <RadioButton
                           android:id="@+id/male"
                           app:hintTextColor="@color/colorPrimaryDark"
                           android:hint="Male"
                           android:checked="true"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"/>
                       <RadioButton
                           android:id="@+id/female"
                           app:hintTextColor="@color/colorPrimaryDark"
                           android:hint="Female"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"/>
                       <RadioButton
                           android:id="@+id/others"
                           app:hintTextColor="@color/colorPrimaryDark"
                           android:hint="Others"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"/>
                   </RadioGroup>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/upassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="20dp"
                        android:hint="Enter Password"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/cpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="20dp"
                        android:hint="Comform Password"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/register"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/round_button"
                    android:text="Register" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="OR"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already have account" />

                    <TextView
                        android:id="@+id/ulogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="  | Login "
                        android:textColor="#fff"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>